Update to java 16 and com.docu-tools:poipath:1.0.0